26.6.5